Fixed invisible tooltip being outside of viewport

--- a/wcfsetup/install/files/style/ui/tooltip.scss
+++ b/wcfsetup/install/files/style/ui/tooltip.scss
@@ -3,6 +3,7 @@
 	border-radius: 2px;
 	box-shadow: 0 0 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
 	color: $wcfTooltipText;
+	left: 0;
 	max-width: 300px;
 	padding: 5px 10px;
 	pointer-events: none;
